# Sics-Nitro-Generator-DEMO

./: README.md
SicsGen/: README.md  Tutorial.txt  pyproject.toml
SicsGen/runtime/: sxlib.xml  theme-wpf.json
